# libvmod-ip2location

./: .gitignore  LICENSE  Makefile.am  README.rst  configure.ac  vmod-ip2location.spec
debian/: changelog  control  copyright  rules
src/: Makefile.am  vmod_ip2location.c  vmod_ip2location.h  vmod_ip2location.vcc
src/tests/: test01.vtc
